--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="renderer" content="webkit">
 
-    <title>鑫昊钢结构-首页</title>
+    <title>首页</title>
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -58,30 +58,30 @@
             </div>
         </div>
         <div class="item">
-            <img src="images/2.jpg" alt="坚持打造好钢">
+            <img src="images/2.jpg" alt="努力学习报效祖国">
             <div class="carousel-caption">
-                <h3>坚持打造好钢</h3>
+                <h3>努力学习报效祖国</h3>
                 <p></p>
             </div>
         </div>
         <div class="item">
-            <img src="images/3.jpg" alt="鑫昊造">
+            <img src="images/3.jpg" alt="好好学习天天向上">
             <div class="carousel-caption">
-                <h3>好钢铁 鑫昊造</h3>
+                <h3>好好学习天天向上</h3>
                 <p></p>
             </div>
         </div>
         <div class="item">
-            <img src="images/4.jpg" alt="质量源于每时每刻的坚持">
+            <img src="images/4.jpg" alt="胜利在于坚持">
             <div class="carousel-caption">
-                <h3>质量源于每时每刻的坚持</h3>
+                <h3>胜利在于坚持</h3>
                 <p></p>
             </div>
         </div>
         <div class="item">
-            <img src="images/2.jpg" alt="一心只为造好钢">
+            <img src="images/2.jpg" alt="沉迷学习无法自拔">
             <div class="carousel-caption">
-                <h3>一心只为造好钢</h3>
+                <h3>沉迷学习无法自拔</h3>
                 <p></p>
             </div>
         </div>
@@ -98,13 +98,17 @@
 </div>
 
 <div class="titlebar">
-    <img src="images/titlebar1.png" alt="走进鑫昊">
+    <img src="images/titlebar1.png" alt="个人介绍">
 </div>
 
 <div class="xh-panel">
     <div class="container">
         <article class="xh-info">
-唐山市丰润区鑫昊钢结构彩钢加工部成立于2006年，拥有多年的设计安装经验，技术力量雄厚。是集设计、生产、加工、安装、经营于一体的企业，本公司拥有最先进的全自动钢结构焊接生产线、彩钢夹芯板流水线及彩钢压型机组十余套。拥有庞大的制作安装队伍及设计人员，也可承接大型拱形屋顶制作安装（4-36米）和采光设计、制作安装工程。 其产品在生产制作技术、施工质量及使用效果上都达到国内领先水平，在客户中享有很高的信誉。同时我们还坚持“用户至上、诚信为本”的宗旨，把企业建成“管理一流、效益一流、服务一流”的现代化企业。 时至今日，我们依然坚持对高科技管理系统执着追求，并且在美观与实用相结合的基础上承诺以“完美优质的设计、一丝不苟的制造，精益求精的施工、超低利润的价格”与广大用户竭诚合作、携手共进、共创辉煌！
+            盼望着，盼望着，东风来了，春天的脚步近了。
+            　　一切都像刚睡醒的样子，欣欣然张开了眼。山朗润起来了，水涨起来了，太阳的脸红起来了。
+            　　小草偷偷地从土里钻出来，嫩嫩的，绿绿的。园子里，田野里，瞧去，一大片一大片满是的。坐着，躺着，打两个滚，踢几脚球，赛几趟跑，捉几回迷藏。风轻悄悄的，草软绵绵的。
+            　　桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。
+            　　“吹面不寒杨柳风”，不错的，像母亲的手抚摸着你。风里带来些新翻的泥土的气息，混着青草味儿，还有各种花的香，都在微微润湿的空气里酝酿。鸟儿将巢安在繁花嫩叶当中，高兴起来了，呼朋引伴地卖弄清脆的喉咙，唱出宛转的曲子，跟轻风流水应和着。牛背上牧童的短笛，这时候也成天嘹亮地响着。
         </article>
         <div class="row xh-guide">
             <div class="col-xs-6 col-sm-4 col-md-2point4 col-lg-2point4">
