modify words for blogs

--- a/inc_foot.html
+++ b/inc_foot.html
@@ -7,18 +7,18 @@
             <div class="col-xs-12 col-sm-5 col-md-5 col-lg-6">
                 <div class="xh-nav-bottom">
                     <ul>
-                        <li><a href="" target="">公司简介</a></li>
-                        <li><a href="" target="">资质荣誉</a></li>
-                        <li><a href="" target="">最新资讯</a></li>
+                        <li><a href="" target="">好好学习</a></li>
+                        <li><a href="" target="">好好学习</a></li>
+                        <li><a href="" target="">好好学习</a></li>
                     </ul>
                     <ul>
-                        <li><a href="" target="">产品展示</a></li>
-                        <li><a href="" target="">成功案例</a></li>
+                        <li><a href="" target="">好好学习</a></li>
+                        <li><a href="" target="">好好学习</a></li>
                     </ul>
                     <ul>
-                        <li><a href="" target="">人才招聘</a></li>
-                        <li><a href="" target="">请您留言</a></li>
-                        <li><a href="" target="">联系方式</a></li>
+                        <li><a href="" target="">好好学习</a></li>
+                        <li><a href="" target="">好好学习</a></li>
+                        <li><a href="" target="">好好学习</a></li>
                     </ul>
                 </div>
             </div>
@@ -39,7 +39,7 @@
     </div>
     <div class="xh-websiteinfo">
         <div class="container">
-            Copyright © 2016   公司地址：唐山市丰润区银城铺工业园国持营村东   联系电话：15533555858    ICP备案：冀12021473号
+            Copyright © 2016   好好学习：好好学习好好学习好好学习   好好学习：123456789789    ICP备案：1345646
         </div>
     </div>
 </div>
