--- a/job-apply.html
+++ b/job-apply.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="renderer" content="webkit">
-    <title>人才招聘-填写求职表</title>
+    <title>好好学习</title>
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -40,12 +40,12 @@
 <div class="public-banner">
     <img src="images/3-0.png"/>
     <div class="public-banner-content blue">
-        <h1>人才招聘</h1>
+        <h1>好好学习</h1>
     </div>
 </div>
 <!--页头-->
 <div class="page-header public-item-header">
-    <h1>填写求职表<!--<small>Subtext for header</small>--></h1>
+    <h1>好好学习<!--<small>Subtext for header</small>--></h1>
 </div>
 
 <!--人才招聘-->
@@ -56,13 +56,13 @@
                 <tbody>
                 <tr>
                     <td height="40" colspan="4" align="center" style="font-size: 18px">
-                        <strong>求职表</strong>
+                        <strong>好好学习</strong>
                     </td>
                 </tr>
                 <tr>
                     <td height="25" align="right">
                         <span style="color:red;">* </span>
-                        应聘职位：
+                        好好学习：
                     </td>
                     <td height="25" colspan="3" align="left">
                         <input name="J_Work" type="text" id="J_Work" value="高级技工"
@@ -72,7 +72,7 @@
                 <tr>
                     <td height="25" align="right">
                         <span style="color:red;">* </span>
-                        真实姓名：
+                        好好学习：
                     </td>
                     <td height="25" align="left">
                         <input type="text" name="J_Name" id="J_Name" size="15" maxlength="30">
@@ -357,7 +357,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td width="14%" height="25" align="right">可到职日期：</td>
+                    <td width="14%" height="25" align="right">好好学习：</td>
                     <td height="25" colspan="3" align="left">
                         <select name="J_Slim">
                             <option value="随时" selected="selected">----随时---</option>
@@ -375,7 +375,7 @@
                 </tr>
                 <tr>
                     <td colspan="4" height="50" align="center">
-                        <input type="submit" value="提交求职表" class="btn btn-xhBlue"
+                        <input type="submit" value="好好学习" class="btn btn-xhBlue"
                                style="width:100px; height:40px; font-size:14px;">
                     </td>
                 </tr>
