--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="renderer" content="webkit">
-    <title>最新资讯</title>
+    <title>最新</title>
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -38,12 +38,12 @@
 <div class="public-banner">
     <img src="images/3-0.png"/>
     <div class="public-banner-content blue">
-        <h1>最新资讯</h1>
+        <h1>最新</h1>
     </div>
 </div>
 <!--页头-->
 <div class="page-header public-item-header">
-    <h1>最新资讯</h1>
+    <h1>最新</h1>
 </div>
 <div class="container xh-news">
     <div class="xh-news-item">
@@ -52,7 +52,7 @@
         </div>
         <div class="xh-news-title">
             <a href="" target="_blank">
-                唐山鑫昊钢结构，钢结构能最大限度的减少自然灾害钢结构能最大限度的减少自然灾害
+                盼望着，盼望着，东风来了，盼望着，盼望着，东风来了
             </a>
         </div>
         <div class="xh-news-time">
@@ -66,7 +66,7 @@
         </div>
         <div class="xh-news-title">
             <a href="" target="_blank">
-                唐山鑫昊钢结构，钢结构能最大限度的减少自然灾害钢结构能最大限度的减少自然灾害
+                盼望着，盼望着，东风来了，盼望着，盼望着，东风来了
             </a>
         </div>
         <div class="xh-news-time">
@@ -80,7 +80,7 @@
         </div>
         <div class="xh-news-title">
             <a href="" target="_blank">
-                唐山鑫昊钢结构，钢结构能最大限度的减少自然灾害钢结构能最大限度的减少自然灾害
+                盼望着，盼望着，东风来了，盼望着，盼望着，东风来了
             </a>
         </div>
         <div class="xh-news-time">
