--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="renderer" content="webkit">
-    <title>关于我们</title>
+    <title>关于</title>
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -60,7 +60,7 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs edit-nav-tabs" role="tablist" id="xhTab">
         <li role="presentation" class="active">
-            <a href="#introduce" aria-controls="introduce" role="tab" data-toggle="tab">公司简介</a>
+            <a href="#introduce" aria-controls="introduce" role="tab" data-toggle="tab">个人简介</a>
         </li>
         <li role="presentation">
             <a href="#honor" aria-controls="honor" role="tab" data-toggle="tab">资质荣誉</a>
@@ -69,7 +69,7 @@
             <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">请您留言</a>
         </li>
         <li role="presentation">
-            <a href="#contact" aria-controls="contact" role="tab" data-toggle="tab">联系方式</a>
+            <a href="#contact" aria-controls="contact" role="tab" data-toggle="tab">基本信息</a>
         </li>
     </ul>
 
@@ -77,12 +77,11 @@
     <div class="tab-content edit-tab-content">
         <!--公司简介-->
         <div role="tabpanel" class="tab-pane xh-AboutIntro active" id="introduce">
-            唐山市丰润区鑫昊钢结构彩钢加工部成立于2006年，专业钢结构设计，钢结构制作加工，钢结构厂房制作，挡风墙 防尘网制作安装。拥有多
-            年的设计安装经验，技术力量雄厚。是集设计、生产、加工、安装、经营于一体的企业，本公司拥有最先进的全自动钢结构焊接生产线、彩钢
-            夹芯板流水线及彩钢压型机组十余套。拥有庞大的制作安装队伍及设计人员，也可承接大型拱形屋顶制作安装（4-36米）和采光设计、制作安
-            装工程。 其产品在生产制作技术、施工质量及使用效果上都达到国内领先水平，在客户中享有很高的信誉。同时我们还坚持“用户至上、诚信
-            为本”的宗旨，把企业建成“管理一流、效益一流、服务一流”的现代化企业。 时至今日，我们依然坚持对高科技管理系统执着追求，并且在美
-            观与实用相结合的基础上承诺以“完美优质的设计、一丝不苟的制造，精益求精的施工、超低利润的价格”与广大用户竭诚合作、携手共进、共创辉煌！
+            盼望着，盼望着，东风来了，春天的脚步近了。
+            　　一切都像刚睡醒的样子，欣欣然张开了眼。山朗润起来了，水涨起来了，太阳的脸红起来了。
+            　　小草偷偷地从土里钻出来，嫩嫩的，绿绿的。园子里，田野里，瞧去，一大片一大片满是的。坐着，躺着，打两个滚，踢几脚球，赛几趟跑，捉几回迷藏。风轻悄悄的，草软绵绵的。
+            　　桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。
+            　　“吹面不寒杨柳风”，不错的，像母亲的手抚摸着你。风里带来些新翻的泥土的气息，混着青草味儿，还有各种花的香，都在微微润湿的空气里酝酿。鸟儿将巢安在繁花嫩叶当中，高兴起来了，呼朋引伴地卖弄清脆的喉咙，唱出宛转的曲子，跟轻风流水应和着。牛背上牧童的短笛，这时候也成天嘹亮地响着。
         </div>
         <!--资质荣誉-->
         <div role="tabpanel" class="tab-pane" id="honor">
@@ -92,7 +91,7 @@
                         <img src="images/honor1.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">企业集团登记证</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -102,7 +101,7 @@
                         <img src="images/honor2.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">组织结构代码证</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -112,7 +111,7 @@
                         <img src="images/honor3.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">企业法人营业执照</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -122,7 +121,7 @@
                         <img src="images/honor4.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">优秀企业奖</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -132,7 +131,7 @@
                         <img src="images/honor1.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">特种设备许可证</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -142,7 +141,7 @@
                         <img src="images/honor2.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">组织结构代码证</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -160,18 +159,18 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading visitname">
-                            <span class="green">陈昭</span>留言
+                            <span class="green">好好学习</span>留言
                             <span class="gray-date">2016-03-31</span>
                         </h4>
-                        <span>hahahahahahahha</span>
+                        <span>好好学习</span>
                         <div class="media xh-message-item">
 
                             <div class="media-body">
                                 <h4 class="media-heading visitname">
-                                    <span class="red">鑫昊钢构</span>回复
+                                    <span class="red">好好学习</span>回复
                                     <span class="gray-date">2016-03-31</span>
                                 </h4>
-                                <span>我是牧马人</span>
+                                <span>好好学习</span>
                             </div>
                             <div class="media-right">
                                 <a href="#">
@@ -190,16 +189,16 @@
                     </div>
                     <div class="media-body">
                         <h4 class="media-heading visitname">
-                            <span class="green">陈昭</span>留言
+                            <span class="green">好好学习</span>留言
                             <span class="gray-date">2016-03-31</span></h4>
-                        <span>hahahahahahahha</span>
+                        <span>好好学习</span>
                         <div class="media xh-message-item">
 
                             <div class="media-body">
                                 <h4 class="media-heading visitname">
-                                    <span class="red">鑫昊钢构</span>回复
+                                    <span class="red">好好学习</span>回复
                                     <span class="gray-date">2016-03-31</span></h4>
-                                <span>我是牧马人</span>
+                                <span>好好学习</span>
                             </div>
                             <div class="media-right">
                                 <a href="#">
@@ -251,12 +250,12 @@
         <!--联系我们-->
         <div role="tabpanel" class="tab-pane" id="contact">
             <div>
-                <p>唐山市丰润区鑫昊钢结构彩钢加工部</p>
-                <p>联系人：王经理</p>
-                <p>联系方式：15533555858</p>
-                <p>邮箱：1145369589@qq.com</p>
-                <p>网址：www.tsxinhao.com</p>
-                <p>地址：唐山市丰润区银城铺工业园国持营村东</p>
+                <p>好好学习</p>
+                <p>好好学习：好好学习</p>
+                <p>好好学习：好好学习</p>
+                <p>好好学习：好好学习@qq.com</p>
+                <p>网址：www.好好学习.com</p>
+                <p>地址：好好学习</p>
             </div>
         </div>
     </div>
