--- a/details.html
+++ b/details.html
@@ -46,19 +46,13 @@
     <h1>最新资讯</h1>
 </div>
 <div class="container xh-details">
-    <h3>唐山钢结构，建筑钢结构环保、安全、耐用</h3>
-    <div class="xh-date">发布日期：2015-05-22</div>
-    技能铸就开展的环境，钢结构工程触及的范畴变得越来越广，如住所、大跨度轻钢结构工业厂房，体育馆，医院等。这些工程的使用给自然环境带来了
-    一片新天地，面临自然灾祸的到来咱们无法逃避，可是在自然灾祸面前咱们要昂首阔步。
-    给予我们不惧怕这恶魔式的自然灾祸的力气就来源于钢结构工程，钢结构所具有是我本身优势，这些灾祸是糟蹋不了它的，只要在灾祸降临之前做好一
-    点的准备工作才干防备于未然。钢结构工程的施工技能跟其他的混凝土技能比较，许多的规划技能不是十分的重要，相对来 讲资料、理论在规划研讨期
-    间是极好施行的；在国内遍及的建设中，新布局局势有许多施工的新问题。近来几年来，国内呈现了许多形态万千的修建，在当前条件下，开展钢结构
-    工程是和节能减排，环境相结合的，更多是从布局技能、施工装置、焊接等方面进行加强来确保修建的安全可靠和稳定性，这是最根底和底子的。实质
-    上，钢结构工程还与修建环境相结合，它所用的建材都是环保的建材，而且在施工的过程中不形成污染，竣工后的修建还有着许多的优势。比方抗震，
-    抗震的级数能够到达8级,防风，通常的劲风是不坚定不了它的，它的布局巩固也让自然灾祸不行腐蚀，而且钢在每时每刻都发辉着它的价值，它使其不
-    断地得到收回使用，以满意咱们不断改变的需求和对时髦的寻求。在安全可靠方面有了以上几点的介绍你对它还有置疑吗
-    如今社会的环境恶化，使得我们越来越惧怕环境了，自然灾祸的来袭更是让我们胆战心惊，尽管咱们都理解这些是阻止不了的，可是为了有更多的安全
-    感为了更夸姣的环境为了美好的将来，我们都在不懈地尽力，钢结构工程也是，它一向都在开展着自个给我们跟多的安全感，把自然灾祸降到最低。
+    <h3>盼望着，盼望着，东风来了</h3>
+    <div class="xh-date">发布日期：2016-12-22</div>
+    盼望着，盼望着，东风来了，春天的脚步近了。
+    　　一切都像刚睡醒的样子，欣欣然张开了眼。山朗润起来了，水涨起来了，太阳的脸红起来了。
+    　　小草偷偷地从土里钻出来，嫩嫩的，绿绿的。园子里，田野里，瞧去，一大片一大片满是的。坐着，躺着，打两个滚，踢几脚球，赛几趟跑，捉几回迷藏。风轻悄悄的，草软绵绵的。
+    　　桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。
+    　　“吹面不寒杨柳风”，不错的，像母亲的手抚摸着你。风里带来些新翻的泥土的气息，混着青草味儿，还有各种花的香，都在微微润湿的空气里酝酿。鸟儿将巢安在繁花嫩叶当中，高兴起来了，呼朋引伴地卖弄清脆的喉咙，唱出宛转的曲子，跟轻风流水应和着。牛背上牧童的短笛，这时候也成天嘹亮地响着。
 </div>
 
 
