--- a/inc_head.html
+++ b/inc_head.html
@@ -1,11 +1,11 @@
 <div class="topbar">
     <div class="container">
         <div class="topbarLeft pull-left animated bounceInUp">
-            欢迎访问唐山丰润区鑫昊钢构官方网站
+            盼望着，盼望着，东风来了
         </div>
         <div class="topbarRight pull-right animated bounceInUp">
             <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
-            &nbsp;&nbsp;0311-1234567489
+            &nbsp;&nbsp;12456789
         </div>
     </div>
 </div>
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-left animated bounceInRight">
                 <li class="dropdown active"><a href="index.html">首页</a></li>
-                <li class="dropdown"><a href="about.html?id=introduce">公司简介</a></li>
-                <li class="dropdown"><a href="about.html?id=honor">资质荣誉</a></li>
-                <li class="dropdown"><a href="news.html">最新资讯</a></li>
-                <li class="dropdown"><a href="product.html">产品展示</a></li>
-                <li class="dropdown"><a href="product.html">成功案例</a></li>
-                <li class="dropdown"><a href="job.html">人才招聘</a></li>
-                <li class="dropdown"><a href="about.html?id=messages">请您留言</a></li>
+                <li class="dropdown"><a href="about.html?id=introduce">关于我</a></li>
+                <li class="dropdown"><a href="about.html?id=honor">获奖经历</a></li>
+                <li class="dropdown"><a href="news.html">最新消息</a></li>
+                <li class="dropdown"><a href="product.html">项目展示</a></li>
+                <li class="dropdown"><a href="product.html">参与项目</a></li>
+                <li class="dropdown"><a href="job.html">工作经历</a></li>
+                <li class="dropdown"><a href="about.html?id=messages">评论板块</a></li>
                 <li class="dropdown"><a href="about.html?id=contact">联系方式</a></li>
 
                 <!--<li class="dropdown">-->
