--- a/job.html
+++ b/job.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="renderer" content="webkit">
-    <title>人才招聘</title>
+    <title>工作</title>
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -40,12 +40,12 @@
 <div class="public-banner">
     <img src="images/3-0.png"/>
     <div class="public-banner-content blue">
-        <h1>人才招聘</h1>
+        <h1>工作</h1>
     </div>
 </div>
 <!--页头-->
 <div class="page-header public-item-header">
-    <h1>招聘职位<!--<small>Subtext for header</small>--></h1>
+    <h1>工作职位<!--<small>Subtext for header</small>--></h1>
 </div>
 
 <!--人才招聘-->
@@ -54,23 +54,22 @@
         <div class="xh-job-item">
             <div class="xh-job-head">
                 <dl>
-                    <dt>招聘职位：</dt>
-                    <dd>高级技工</dd>
+                    <dt>工作职位：</dt>
+                    <dd>高级工程师</dd>
                 </dl>
-                <a href="job-apply.html?job=1" class="btn btn-xhBlue xh-job-apply">我要应聘</a>
+                <a href="job-apply.html?job=1" class="btn btn-xhBlue xh-job-apply">查看详情</a>
             </div>
             <div class="xh-job-body">
                 <dl>
-                    <dt>招聘人数：</dt>
+                    <dt>薪资：</dt>
                     <dd>50</dd>
                 </dl>
                 <dl>
                     <dt>具体要求：</dt>
                     <dd>
+                        <p>桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。</p>
                         <p>
-                            为不断满足和超越客户对我们的期望，我们诚邀高素质专业人员加盟并共同成长。公司将提供完善的福利待遇和培训，以及良好的个人职业发展空间。</p>
-                        <p>
-                            有意者请将应聘信、简历、身份证、毕业证及相关专业证书复印件、近照及期望薪资邮寄或E-mail至本公司，请务必注明您的应聘职位。
+                            桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。
                         </p>
                     </dd>
                 </dl>
@@ -80,22 +79,22 @@
             <div class="xh-job-head">
                 <dl>
                     <dt>招聘职位：</dt>
-                    <dd>高级技工</dd>
+                    <dd>高级工程师</dd>
                 </dl>
-                <a href="job-apply.html?job=2" class="btn btn-xhBlue xh-job-apply">我要应聘</a>
+                <a href="job-apply.html?job=2" class="btn btn-xhBlue xh-job-apply">查看详情</a>
             </div>
             <div class="xh-job-body">
                 <dl>
-                    <dt>招聘人数：</dt>
+                    <dt>薪资：</dt>
                     <dd>50</dd>
                 </dl>
                 <dl>
                     <dt>具体要求：</dt>
                     <dd>
                         <p>
-                            为不断满足和超越客户对我们的期望，我们诚邀高素质专业人员加盟并共同成长。公司将提供完善的福利待遇和培训，以及良好的个人职业发展空间。</p>
+                            小草偷偷地从土里钻出来，嫩嫩的，绿绿的。园子里，田野里，瞧去，一大片一大片满是的。坐着，躺着，打两个滚，踢几脚球，赛几趟跑，捉几回迷藏。风轻悄悄的，草软绵绵的。</p>
                         <p>
-                            有意者请将应聘信、简历、身份证、毕业证及相关专业证书复印件、近照及期望薪资邮寄或E-mail至本公司，请务必注明您的应聘职位。
+                            桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。
                         </p>
                     </dd>
                 </dl>
@@ -105,22 +104,21 @@
             <div class="xh-job-head">
                 <dl>
                     <dt>招聘职位：</dt>
-                    <dd>高级技工</dd>
+                    <dd>高级工程师</dd>
                 </dl>
-                <a href="job-apply.html?job=3" class="btn btn-xhBlue xh-job-apply">我要应聘</a>
+                <a href="job-apply.html?job=3" class="btn btn-xhBlue xh-job-apply">查看详情</a>
             </div>
             <div class="xh-job-body">
                 <dl>
-                    <dt>招聘人数：</dt>
+                    <dt>薪资：</dt>
                     <dd>50</dd>
                 </dl>
                 <dl>
                     <dt>具体要求：</dt>
                     <dd>
                         <p>
-                            为不断满足和超越客户对我们的期望，我们诚邀高素质专业人员加盟并共同成长。公司将提供完善的福利待遇和培训，以及良好的个人职业发展空间。</p>
-                        <p>
-                            有意者请将应聘信、简历、身份证、毕业证及相关专业证书复印件、近照及期望薪资邮寄或E-mail至本公司，请务必注明您的应聘职位。
+                            桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。</p>
+                        <p>桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。
                         </p>
                     </dd>
                 </dl>
