--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="renderer" content="webkit">
-    <title>产品展示</title>
+    <title>项目</title>
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -40,22 +40,22 @@
 <div class="public-banner">
     <img src="images/3-0.png"/>
     <div class="public-banner-content blue">
-        <h1>产品展示</h1>
+        <h1>好好学习</h1>
     </div>
 </div>
 <!--页头-->
 <div class="page-header public-item-header">
-    <h1>钢结构<!--<small>Subtext for header</small>--></h1>
+    <h1>好好学习<!--<small>Subtext for header</small>--></h1>
 </div>
 <!---->
 <div class="container">
     <!-- Nav tabs -->
     <ul class="nav nav-tabs edit-nav-tabs" role="tablist" id="xhTab">
-        <li role="presentation" class="active"><a href="#item1" role="tab" data-toggle="tab">钢结构</a></li>
-        <li role="presentation"><a href="#item2" role="tab" data-toggle="tab">拱形房屋</a></li>
-        <li role="presentation"><a href="#item3" role="tab" data-toggle="tab">防尘墙</a></li>
-        <li role="presentation"><a href="#item4" role="tab" data-toggle="tab">彩钢</a></li>
-        <li role="presentation"><a href="#item5" role="tab" data-toggle="tab">厂房</a></li>
+        <li role="presentation" class="active"><a href="#item1" role="tab" data-toggle="tab">好好学习</a></li>
+        <li role="presentation"><a href="#item2" role="tab" data-toggle="tab">好好学习</a></li>
+        <li role="presentation"><a href="#item3" role="tab" data-toggle="tab">好好学习</a></li>
+        <li role="presentation"><a href="#item4" role="tab" data-toggle="tab">好好学习</a></li>
+        <li role="presentation"><a href="#item5" role="tab" data-toggle="tab">好好学习</a></li>
     </ul>
 
     <!-- Tab panes -->
@@ -67,7 +67,7 @@
                         <img src="images/product1.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">空间场馆钢结构空间场馆钢结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                         <img src="images/product3.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">钢结构管材</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -87,7 +87,7 @@
                         <img src="images/product2.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">高强度桥梁结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                         <img src="images/product1.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">空间结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                         <img src="images/product3.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">钢结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                         <img src="images/product3.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">钢结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                         <img src="images/product3.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">钢结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         <img src="images/product3.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">钢结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                         <img src="images/product1.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">空间结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -188,7 +188,7 @@
                         <img src="images/product3.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">钢结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                         <img src="images/product1.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">空间结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                         <img src="images/product3.jpg" alt="">
                         <div class="caption">
                             <h3>
-                                <a href="" target="_blank">钢结构</a>
+                                <a href="" target="_blank">好好学习</a>
                             </h3>
                         </div>
                     </div>
