关于我们 改成 关于我

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 <div class="public-banner">
     <img src="images/3-0.png"/>
     <div class="public-banner-content blue">
-        <h1>关于我们</h1>
+        <h1>关于我</h1>
     </div>
 </div>
 <!--页头-->
