修改图片为风景图片；引入gulp，正式开始对项目进行构建：主要包括CSS压缩，js压缩，sourcemaps启用。

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="renderer" content="webkit">
-    <title>关于</title>
+    <title>关于我</title>
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -14,13 +14,13 @@
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
 
     <!-- JS -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.ajaxInclude.js"></script>
+    <script src="js/jquery.ajaxInclude.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/common.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -46,7 +46,7 @@
 
 <!--banner图片-->
 <div class="public-banner">
-    <img src="images/3-0.png"/>
+    <img src="images/sub-banner.jpg"/>
     <div class="public-banner-content blue">
         <h1>关于我</h1>
     </div>
@@ -69,7 +69,7 @@
             <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">留言板</a>
         </li>
         <li role="presentation">
-            <a href="#contact" aria-controls="contact" role="tab" data-toggle="tab">现住地址</a>
+            <a href="#contact" aria-controls="contact" role="tab" data-toggle="tab">联系方式</a>
         </li>
     </ul>
 
