--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="renderer" content="webkit">
-    <title>最新</title>
+    <title>最新文章</title>
     <meta name="Keywords" content="">
     <meta name="Description" content="">
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -13,11 +13,11 @@
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
 
     <!-- JS -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.ajaxInclude.js"></script>
+    <script src="js/jquery.ajaxInclude.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -36,14 +36,14 @@
 
 <!--banner图片-->
 <div class="public-banner">
-    <img src="images/3-0.png"/>
+    <img src="images/sub-banner.jpg"/>
     <div class="public-banner-content blue">
-        <h1>最新</h1>
+        <h1>最新文章</h1>
     </div>
 </div>
 <!--页头-->
 <div class="page-header public-item-header">
-    <h1>最新</h1>
+    <h1>最新文章</h1>
 </div>
 <div class="container xh-news">
     <div class="xh-news-item">
@@ -51,7 +51,7 @@
             <img class="media-object" src="images/product1.jpg" alt="">
         </div>
         <div class="xh-news-title">
-            <a href="" target="_blank">
+            <a href="details.html" target="">
                 盼望着，盼望着，东风来了，盼望着，盼望着，东风来了
             </a>
         </div>
@@ -65,7 +65,7 @@
             <img class="media-object" src="images/product1.jpg" alt="">
         </div>
         <div class="xh-news-title">
-            <a href="" target="_blank">
+            <a href="details.html" target="">
                 盼望着，盼望着，东风来了，盼望着，盼望着，东风来了
             </a>
         </div>
@@ -79,7 +79,7 @@
             <img class="media-object" src="images/product1.jpg" alt="">
         </div>
         <div class="xh-news-title">
-            <a href="" target="_blank">
+            <a href="details.html" target="">
                 盼望着，盼望着，东风来了，盼望着，盼望着，东风来了
             </a>
         </div>
