--- a/details.html
+++ b/details.html
@@ -13,11 +13,11 @@
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
 
     <!-- JS -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.ajaxInclude.js"></script>
+    <script src="js/jquery.ajaxInclude.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -36,14 +36,14 @@
 
 <!--banner图片-->
 <div class="public-banner">
-    <img src="images/3-0.png"/>
+    <img src="images/sub-banner.jpg"/>
     <div class="public-banner-content blue">
         <!--<h1>详情页</h1>-->
     </div>
 </div>
 <!--页头-->
 <div class="page-header public-item-header">
-    <h1>最新资讯</h1>
+    <h1 onclick="javascript:history.go(-1)" style="cursor: pointer">返回上级</h1>
 </div>
 <div class="container xh-details">
     <h3>盼望着，盼望着，东风来了</h3>
@@ -54,8 +54,6 @@
     　　桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。
     　　“吹面不寒杨柳风”，不错的，像母亲的手抚摸着你。风里带来些新翻的泥土的气息，混着青草味儿，还有各种花的香，都在微微润湿的空气里酝酿。鸟儿将巢安在繁花嫩叶当中，高兴起来了，呼朋引伴地卖弄清脆的喉咙，唱出宛转的曲子，跟轻风流水应和着。牛背上牧童的短笛，这时候也成天嘹亮地响着。
 </div>
-
-
 
 <!-- 底部 start-->
 <script id="Foot" type="text/javascript">
