--- a/inc_head.html
+++ b/inc_head.html
@@ -30,19 +30,18 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-left animated bounceInRight">
                 <li class="dropdown active"><a href="index.html">首页</a></li>
-                <li class="dropdown"><a href="about.html?id=introduce">关于我</a></li>
-                <li class="dropdown"><a href="about.html?id=honor">获奖经历</a></li>
-                <li class="dropdown"><a href="news.html">最新消息</a></li>
-                <li class="dropdown"><a href="product.html">项目展示</a></li>
+                <li class="dropdown"><a href="about.html?id=introduce">个人简介</a></li>
+                <li class="dropdown"><a href="about.html?id=honor">我的相册</a></li>
+                <li class="dropdown"><a href="about.html?id=messages">留言板</a></li>
+                <li class="dropdown"><a href="about.html?id=contact">联系方式</a></li>
+                <li class="dropdown"><a href="news.html">最新文章</a></li>
                 <li class="dropdown"><a href="product.html">参与项目</a></li>
                 <li class="dropdown"><a href="job.html">工作经历</a></li>
-                <li class="dropdown"><a href="about.html?id=messages">评论板块</a></li>
-                <li class="dropdown"><a href="about.html?id=contact">联系方式</a></li>
 
                 <!--<li class="dropdown">-->
                     <!--<a href="about.html?id=introduce" class="dropdown-toggle"-->
                        <!--data-hover="dropdown" role="button" aria-expanded="false">-->
-                        <!--公司简介-->
+                        <!--一级菜单-->
                         <!--&lt;!&ndash;<span class="caret"></span>&ndash;&gt;-->
                     <!--</a>-->
                     <!--<ul class="dropdown-menu" role="menu">-->
@@ -51,99 +50,9 @@
                         <!--<li><a href="##">二级菜单</a></li>-->
                         <!--<li><a href="##">二级菜单</a></li>-->
                     <!--</ul>-->
-                <!--</li>-->
-                <!--<li class="dropdown">-->
-                    <!--<a href="about.html?id=honor" class="dropdown-toggle"-->
-                       <!--data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false">-->
-                        <!--资质荣誉-->
-                        <!--&lt;!&ndash;<span class="caret"></span>&ndash;&gt;-->
-                    <!--</a>-->
-                    <!--<ul class="dropdown-menu" role="menu">-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li class="dropdown">-->
-                    <!--<a href="news.html" class="dropdown-toggle"-->
-                       <!--data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false">-->
-                        <!--最新资讯-->
-                        <!--&lt;!&ndash;<span class="caret"></span>&ndash;&gt;-->
-                    <!--</a>-->
-                    <!--<ul class="dropdown-menu" role="menu">-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li class="dropdown">-->
-                    <!--<a href="product.html" class="dropdown-toggle"-->
-                       <!--data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false">-->
-                        <!--产品展示-->
-                        <!--&lt;!&ndash;<span class="caret"></span>&ndash;&gt;-->
-                    <!--</a>-->
-                    <!--<ul class="dropdown-menu" role="menu">-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li class="dropdown">-->
-                    <!--<a href="product.html" class="dropdown-toggle"-->
-                       <!--data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false">-->
-                        <!--成功案例-->
-                        <!--&lt;!&ndash;<span class="caret"></span>&ndash;&gt;-->
-                    <!--</a>-->
-                    <!--<ul class="dropdown-menu" role="menu">-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li class="dropdown">-->
-                    <!--<a href="job.html" class="dropdown-toggle"-->
-                       <!--data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false">-->
-                        <!--人才招聘-->
-                        <!--&lt;!&ndash;<span class="caret"></span>&ndash;&gt;-->
-                    <!--</a>-->
-                    <!--&lt;!&ndash;<ul class="dropdown-menu" role="menu">&ndash;&gt;-->
-                        <!--&lt;!&ndash;<li><a href="##">二级菜单</a></li>&ndash;&gt;-->
-                        <!--&lt;!&ndash;<li><a href="##">二级菜单</a></li>&ndash;&gt;-->
-                        <!--&lt;!&ndash;<li><a href="##">二级菜单</a></li>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</ul>&ndash;&gt;-->
-                <!--</li>-->
-                <!--<li class="dropdown">-->
-                    <!--<a href="about.html?id=messages" class="dropdown-toggle"-->
-                       <!--data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false">-->
-                        <!--请您留言-->
-                        <!--&lt;!&ndash;<span class="caret"></span>&ndash;&gt;-->
-                    <!--</a>-->
-                    <!--<ul class="dropdown-menu" role="menu">-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                        <!--<li><a href="##">二级菜单</a></li>-->
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li class="dropdown">-->
-                    <!--<a href="about.html?id=contact" class="dropdown-toggle"-->
-                       <!--data-toggle="dropdown" data-hover="dropdown" role="button" aria-expanded="false">-->
-                        <!--联系方式-->
-                        <!--&lt;!&ndash;<span class="caret"></span>&ndash;&gt;-->
-                    <!--</a>-->
                 <!--</li>-->
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-<script type="text/javascript" src="js/nav.js"></script>
+<script type="text/javascript" src="js/nav.min.js"></script>
