--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
 
     <!-- JS -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.ajaxInclude.js"></script>
+    <script src="js/jquery.ajaxInclude.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/common.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
