--- a/job-apply.html
+++ b/job-apply.html
@@ -14,13 +14,13 @@
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/main.min.css" rel="stylesheet">
 
     <!-- JS -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/jquery.ajaxInclude.js"></script>
+    <script src="js/jquery.ajaxInclude.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/common.js"></script>
+    <script src="js/common.min.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -38,7 +38,7 @@
 
 <!--banner图片-->
 <div class="public-banner">
-    <img src="images/3-0.png"/>
+    <img src="images/sub-banner.jpg"/>
     <div class="public-banner-content blue">
         <h1>好好学习</h1>
     </div>
