--- a/index.html
+++ b/index.html
@@ -104,11 +104,7 @@
 <div class="xh-panel">
     <div class="container">
         <article class="xh-info">
-            盼望着，盼望着，东风来了，春天的脚步近了。
-            　　一切都像刚睡醒的样子，欣欣然张开了眼。山朗润起来了，水涨起来了，太阳的脸红起来了。
-            　　小草偷偷地从土里钻出来，嫩嫩的，绿绿的。园子里，田野里，瞧去，一大片一大片满是的。坐着，躺着，打两个滚，踢几脚球，赛几趟跑，捉几回迷藏。风轻悄悄的，草软绵绵的。
-            　　桃树、杏树、梨树，你不让我，我不让你，都开满了花赶趟儿。红的像火，粉的像霞，白的像雪。花里带着甜味儿，闭了眼，树上仿佛已经满是桃儿、杏儿、梨儿。花下成千成百的蜜蜂嗡嗡地闹着，大小的蝴蝶飞来飞去。野花遍地是：杂样儿，有名字的，没名字的，散在花丛里，像眼睛，像星星，还眨呀眨的。
-            　　“吹面不寒杨柳风”，不错的，像母亲的手抚摸着你。风里带来些新翻的泥土的气息，混着青草味儿，还有各种花的香，都在微微润湿的空气里酝酿。鸟儿将巢安在繁花嫩叶当中，高兴起来了，呼朋引伴地卖弄清脆的喉咙，唱出宛转的曲子，跟轻风流水应和着。牛背上牧童的短笛，这时候也成天嘹亮地响着。
+            尊敬的访客，你好！这是我的个人博客，基于GitHub Pages搭建的。无耻的没有采用jekyll和hexo等框架。博客目前还处于搭建中，很多板块还是空的。我会慢慢把它填满的！！！
         </article>
         <div class="row xh-guide">
             <div class="col-xs-6 col-sm-4 col-md-2point4 col-lg-2point4">
@@ -155,7 +151,7 @@
             <!-- Nav tabs -->
             <ul class="nav nav-btmline" role="tablist">
                 <li role="presentation" class="active">
-                    <a href="#xhTab1" aria-controls="xhTab1" role="tab" data-toggle="tab">好好学习</a>
+                    <a href="#xhTab1" aria-controls="xhTab1" role="tab" data-toggle="tab">开源组件</a>
                 </li>
                 <li role="presentation">
                     <a href="#xhTab2" aria-controls="xhTab2" role="tab" data-toggle="tab">好好学习</a>
@@ -179,17 +175,17 @@
                 <div role="tabpanel" class="tab-pane fade in active" id="xhTab1">
                     <div class="row xh-pd-content-row">
                         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2point4 xh-pd-card hover-box">
-                            <a href="##">
+                            <a href="https://github.com/myfancy/ajaxInclude" target="_blank">
                                 <img class="hover-animation" src="images/pd1.jpg" alt="好好学习">
-                                <h3>好好学习</h3>
-                                <p>阳光海滩，陪伴我度过浪漫夏天，椰岛小船，消遣每个快乐的一天</p>
+                                <h3>ajaxInclude组件</h3>
+                                <p>模拟php的include功能，使前端开发可以直接提取工作页面出来</p>
                             </a>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2point4 xh-pd-card hover-box">
-                            <a href="##">
+                            <a href="https://github.com/myfancy/PreviewPicByBrowser" target="_blank">
                                 <img class="hover-animation" src="images/pd2.jpg" alt="好好学习">
-                                <h3>好好学习</h3>
-                                <p>阳光海滩，陪伴我度过浪漫夏天，椰岛小船，消遣每个快乐的一天</p>
+                                <h3>设计稿预览组件</h3>
+                                <p>帮助客户在浏览器中快速预览设计稿图片</p>
                             </a>
                         </div>
                         <div class="col-xs-6 col-sm-6 col-md-4 col-lg-2point4 xh-pd-card hover-box">
