--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
         <div class="item active">
-            <img src="images/1.jpg" alt="屹立不倒">
+            <img src="images/1.jpg" alt="沉迷学习 无法自拔">
             <div class="carousel-caption">
-                <h3>钢铁精神 屹立不倒</h3>
+                <h3>沉迷学习 无法自拔</h3>
                 <p></p>
             </div>
         </div>
         <div class="item">
-            <img src="images/2.jpg" alt="努力学习报效祖国">
+            <img src="images/2.jpg" alt="沉迷学习 无法自拔">
             <div class="carousel-caption">
-                <h3>努力学习报效祖国</h3>
+                <h3>沉迷学习 无法自拔</h3>
                 <p></p>
             </div>
         </div>
         <div class="item">
             <img src="images/3.jpg" alt="好好学习天天向上">
             <div class="carousel-caption">
-                <h3>好好学习天天向上</h3>
+                <h3>好好学习 天天向上</h3>
                 <p></p>
             </div>
         </div>
@@ -81,7 +81,7 @@
         <div class="item">
             <img src="images/2.jpg" alt="沉迷学习无法自拔">
             <div class="carousel-caption">
-                <h3>沉迷学习无法自拔</h3>
+                <h3>沉迷学习 无法自拔</h3>
                 <p></p>
             </div>
         </div>
